[package]
edition = "2021"
name = "spider_rs"
version = "0.0.43"
repository = "https://github.com/spider-rs/spider-py"
license = "MIT"
description = "The fastest web crawler and indexer."

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = "2"
num_cpus = "1"
spider = { version = "1.99.5", features = ["cron", "regex", "cookies", "socks", "chrome", "control", "smart", "chrome_intercept", "cache", "serde", "openai", "headers" ] }
pyo3 = { version = "0.20.3", features = ["extension-module", "serde"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
serde_json = "1"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.96", features = ["vendored"] }
openssl = { version = "0.10.60", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.96", features = ["vendored"] }
openssl = { version = "0.10.60", features = ["vendored"] }

[profile.release]
lto = true
